# python-profiling

./: .gitignore  Makefile  README.md  cli.py  pyproject.toml  wsgi-profiling.py
src/: config.py  utils.py
src/algos/: dummy_algo.py  jenks.py
tests/: test_dummy_algo.py
